--- a/Shellac.cabal
+++ b/Shellac.cabal
@@ -1,8 +1,8 @@
+cabal-version:  3.0
 Name:           Shellac
-Cabal-Version:  >= 1.22
 Build-Type:     Simple
 Version:        0.9.9
-License:        BSD3
+License:        BSD-3-Clause
 License-File:   LICENSE
 Author:         Robert Dockins
 Maintainer:     robdockins AT fastmail DOT fm
@@ -20,6 +20,8 @@ Description:
   This library attempts to allow users to write shells at a high level
   and still enjoy the advanced features that may be available from a
   powerful line editing package like readline.
+
+tested-with: GHC == 9.10.1
 
 Source-repository head
   type:     git
