--- a/Shellac.cabal
+++ b/Shellac.cabal
@@ -21,7 +21,7 @@ Description:
   and still enjoy the advanced features that may be available from a
   powerful line editing package like readline.
 
-tested-with: GHC == 9.10.1
+tested-with: GHC == { 9.10.1, 9.8.2, 9.6.5 }
 
 Source-repository head
   type:     git
