--- a/shellac-haskeline/Shellac-haskeline.cabal
+++ b/shellac-haskeline/Shellac-haskeline.cabal
@@ -1,9 +1,8 @@
+cabal-version:  3.0
 Name:           Shellac-haskeline
-Cabal-Version:  >=1.22
-Version:        0.2.1
-Category:       User Interfaces
+Version:        0.9.9.1
 Build-Type:     Simple
-License:        BSD3
+License:        BSD-3-Clause
 License-File:   LICENSE
 Copyright:      (c) Judah Jacobson
 Author:         Judah Jacobson
@@ -14,18 +13,19 @@ Description:    This module provides a backend for Shellac using the Haskeline l
                 provides rich line editing capabilities, command completion and command
                 history features.
 Stability:      Experimental
-Build-Type:     Simple
+
+tested-with: GHC == { 9.10.1 }
 
 Source-repository head
   type:     git
-  location: git://github.com/robdockins/shellac
+  location: https://github.com/robdockins/shellac
   subdir:   shellac-haskeline
 
 Library
-    Build-depends: base>=3 && <5,
-                   Shellac==0.9.*,
-                   haskeline==0.7.*,
-                   mtl>=2.2 && < 2.3
+    Build-depends: base      >= 3 && < 5,
+                   Shellac   == 0.9.9.1,
+                   haskeline >= 0.8.3.0 && < 0.9,
+                   mtl       >= 2.3.1 && < 2.4
     Exposed-Modules:
                 System.Console.Shell.Backend.Haskeline
     Default-Language: Haskell2010
